--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.konnta0.noctisjetbrains</id>
-    <name>noctis</name>
+    <name>noctis like theme</name>
     <vendor>konnta0</vendor>
 
     <depends>com.intellij.modules.platform</depends>
