--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.konnta0.noctisjetbrains</id>
+    <id>com.github.konnta0.noctislikejetbrains</id>
     <name>noctis like theme</name>
     <vendor>konnta0</vendor>
 
